gcc/testsuite/rust/rustc/ui/issues/issue-17033.rs
fn f<'r>(p: &'r mut fn(p: &mut ())) {
    (*p)(()) // { dg-error ".E0308." "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-2 }
}

fn main() {}

